--- a/content/sass/_color.scss
+++ b/content/sass/_color.scss
@@ -61,7 +61,7 @@
 // Always lead with 100% block colour followed by 75% tint or less for tonal contrast when needed. After 75%/50% tint, some colours do not look like SL brand colours and may not be approved.
 //
 //<div class="row">
-//  <div class="col medium_6">
+//  <div class="col small_12 large_6">
 //    <table class="table table--plain table--condensed">
 //      <thead>
 //        <tr><th>Dark blue</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
@@ -74,7 +74,7 @@
 //      </tbody>
 //    </table>
 //  </div>
-//  <div class="col medium_6">
+//  <div class="col small_12 large_6">
 //    <table class="table table--plain table--condensed">
 //      <thead>
 //        <tr><th>Bright blue</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
@@ -87,7 +87,7 @@
 //      </tbody>
 //    </table>
 //  </div>
-//  <div class="col medium_6">
+//  <div class="col small_12 large_6">
 //    <table class="table table--plain table--condensed">
 //      <thead>
 //        <tr><th>Yellow</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
@@ -100,7 +100,7 @@
 //      </tbody>
 //    </table>
 //  </div>
-//  <div class="col medium_6">
+//  <div class="col small_12 large_6">
 //    <table class="table table--plain table--condensed">
 //      <thead>
 //        <tr><th>Orange</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
@@ -113,7 +113,7 @@
 //      </tbody>
 //    </table>
 //  </div>
-//  <div class="col medium_6">
+//  <div class="col small_12 large_6">
 //    <table class="table table--plain table--condensed">
 //      <thead>
 //        <tr><th>Grey</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
@@ -126,7 +126,7 @@
 //      </tbody>
 //    </table>
 //  </div>
-//  <div class="col medium_6">
+//  <div class="col small_12 large_6">
 //    <table class="table table--plain table--condensed">
 //      <thead>
 //        <tr><th>Blue tint</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
@@ -149,7 +149,7 @@
 // Additional web colours for complex graphs and charts only
 //
 //<div class="row">
-//  <div class="col medium_6">
+//  <div class="col small_12 large_6">
 //    <table class="table table--plain table--condensed">
 //      <thead>
 //        <tr><th>Dark green</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
@@ -162,7 +162,7 @@
 //      </tbody>
 //    </table>
 //  </div>
-//  <div class="col medium_6">
+//  <div class="col small_12 large_6">
 //    <table class="table table--plain table--condensed">
 //      <thead>
 //        <tr><th>Green</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
@@ -175,7 +175,7 @@
 //      </tbody>
 //    </table>
 //  </div>
-//  <div class="col medium_6">
+//  <div class="col small_12 large_6">
 //    <table class="table table--plain table--condensed">
 //      <thead>
 //        <tr><th>Purple</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
@@ -188,7 +188,7 @@
 //      </tbody>
 //    </table>
 //  </div>
-//  <div class="col medium_6">
+//  <div class="col small_12 large_6">
 //    <table class="table table--plain table--condensed">
 //      <thead>
 //        <tr><th>Mauve</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
@@ -201,7 +201,7 @@
 //      </tbody>
 //    </table>
 //  </div>
-//  <div class="col medium_6">
+//  <div class="col small_12 large_6">
 //    <table class="table table--plain table--condensed">
 //      <thead>
 //        <tr><th>Dark red</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
@@ -214,7 +214,7 @@
 //      </tbody>
 //    </table>
 //  </div>
-//  <div class="col medium_6">
+//  <div class="col small_12 large_6">
 //    <table class="table table--plain table--condensed">
 //      <thead>
 //        <tr><th>Dark Orange</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
@@ -227,7 +227,7 @@
 //      </tbody>
 //    </table>
 //  </div>
-//  <div class="col medium_6">
+//  <div class="col small_12 large_6">
 //    <table class="table table--plain table--condensed">
 //      <thead>
 //        <tr><th>Bright Yellow</th><th>%</th><th>Hexadecimal</th><th>CSS</th></tr>
