--- a/content/sass/_panels.scss
+++ b/content/sass/_panels.scss
@@ -83,6 +83,12 @@
 	width:lh(.66);	
 	}
 	
+.circle--medium {
+	height:lh(3.66);
+	line-height:lh(3.66);		
+	width:lh(3.66);	
+	}
+	
 .circle--large {
 	height:rem(120px);
 	line-height:rem(120px);
