--- a/content/sass/_alerts.scss
+++ b/content/sass/_alerts.scss
@@ -21,63 +21,55 @@
 
 // Core
 
-
 .alert {
-	background-color:rgba($yellow, .5);
-	border:1px solid darken($yellow, 20%);
-	color:darken($yellow, 30%);
+	background-color:tint($yellow, 75%);
+	border:1px solid $yellow;
+	color:$grey;
 	display:block;
 	font-family:$secondary-font;
 	font-size:rem(18px);
 	margin:0 0 lh(1) 0;
 	padding:lh(1) lh(1.66);
 	a {
-		color:darken($yellow, 30%);
+		color:$dark-orange;
 		&:hover {
 			text-decoration:underline;
 			}
 		}
 	}
-	
+		
 .alert--info {
-    background-color:$info-color;
-	border-color: darken($info-color, 20%);
-	color:$dark-blue;
+    background-color:$blue-tint;
+	border-color: tint($bright-blue, 50%);
+	color:$bright-blue;
 	a {
-		color:$dark-blue;
+		color:$bright-blue;
 		}
 	}
 	
 .alert--success {
-    background-color:lighten($success-color, 40%);
-	border-color: darken($success-color, 20%);
-	color:darken($success-color, 10%);
+    background-color:tint($green, 75%);
+	border-color:tint($green, 50%);
+	color:$dark-green;
 	a {
-		color:darken($success-color, 30%);
+		color:$dark-green;
 		}
 	}
 	
 .alert--warning {
-    background-color:rgba($warning-color, .75);
-	border-color: darken($warning-color, 20%);
-	color:darken($warning-color, 20%);
+    background-color:tint($orange, 75%);
+	border-color:tint($orange, 50%);
+	color:$dark-orange;
 	a {
-		color:darken($warning-color, 20%);
+		color:$dark-orange;
 		}
 	}
 	
 .alert--danger {
-    background-color:rgba($danger-color, .5);
-	border-color: darken($danger-color, 20%);
-	color:darken($danger-color, 20%);
-	
+    background-color:tint($dark-red, 75%);
+	border-color:tint($dark-red, 50%);
+	color:$dark-red;
 	a {
-		color:darken($danger-color, 30%);
+		color:$dark-red;
 		}
-		
 	}
-
-
-
-
-
