--- a/content/sass/_sharepoint.scss
+++ b/content/sass/_sharepoint.scss
@@ -1,13 +1,47 @@
-// Maps
-//
-// Embedding a google map
-//
-//If you need to display the location of something use this code to embed a Google map in your site.
-//Search for the desired location within the Google maps website and replace the link as appropriate in the code.
-//
-// Markup:
-//<div class="panel">
-//	<iframe width="1500" height="900" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.uk/maps?amp;q=eh1+maps&amp;ie=UTF8&amp;hq=&amp;gl=uk&amp;t=m&amp;z=14&amp;ll=55.957394,-3.187262&amp;output=embed"></iframe>
-//</div>
-//
-// Styleguide 12.0
+.sp-search-results {
+ 	.ms-srch-group-content {
+		font-family:$secondary-font;
+		}
+		
+	.ms-srch-item {
+		border-bottom:1px solid $light-grey-2;
+		clear: both;
+		margin: 10px 0px 10px -10px;
+		max-width:rem(800px);
+		overflow: hidden;
+		padding: 5px 20px 5px 10px;
+		width: 100%;
+		}
+		
+	.ms-srch-item-link {
+		font-family:$primary-font;
+		font-size:rem(28px);
+		font-weight:normal;
+		}
+		
+	.ms-srch-item-path {
+		color:$grey;
+		font-size:rem(14px);
+		width:100%;
+		}
+		
+	.ms-ref-refinername {
+		color:$bright-blue;
+		font-family:$primary-font;
+		}
+		
+	.ms-ref-name {
+		border-bottom:1px solid $light-grey-2;
+		display:block;
+		font-family:$secondary-font;
+		font-size:rem(14px);
+		padding:lh(.15) 0;
+		}
+		
+	.ms-srch-hover-outerContainer {
+		@include respond-max(60em){
+			display:none !important;
+			}
+		}
+		
+	}
